[package]
name = "log_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = { version = "2.0" }
log = "0.4.21"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
maplit = "1.0.2"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }